@@ -1,3 +1,11 @@
+2009-07-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	UUID support for UFS
+
+	* fs/ufs.c (grub_ufs_sblock): Add uuidhi and uuidlow.
+	(grub_ufs_uuid): New function.
+	(grub_ufs_fs): add .uuid
+
 2009-07-21  Pavel Roskin  <proski@gnu.org>
 
 	* kern/dl.c (grub_dl_check_header): Make static.
